[gd_scene load_steps=3 format=3 uid="uid://onngndlxmxl0"]

[ext_resource type="Script" path="res://mob.gd" id="1_gq0yg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xgy6s"]
size = Vector2(16, 30)

[node name="Mob" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource("1_gq0yg")

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="Animation" type="AnimatedSprite2D" parent="."]

[node name="Hitbox" type="Area2D" parent="." groups=["Mobs Hitbox"]]

[node name="Left" type="CollisionPolygon2D" parent="Hitbox"]
disabled = true

[node name="Right" type="CollisionPolygon2D" parent="Hitbox"]
disabled = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Hurtbox" type="CollisionShape2D" parent="Hurtbox"]

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="Detector" type="CollisionShape2D" parent="PlayerDetector"]

[node name="Body" type="Area2D" parent="." groups=["Mobs Body"]]

[node name="Collision" type="CollisionShape2D" parent="Body"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_xgy6s")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
